--- a/templates/footer-3.html
+++ b/templates/footer-3.html
@@ -1,6 +1,6 @@
 <footer class="font-sans bg-white py-8 px-4">
   <div class="mx-auto container overflow-hidden flex flex-col md:flex-row justify-between pb-4 text-center md:text-left">
-    <a href="/" class="block mr-4 w-full md:w-1/4">
+    <a href="#" class="block mr-4 w-full md:w-1/4">
       <img src="https://stitches-cdn.hyperyolo.com/logo.png" class="w-32 -ml-8 md:ml-0" alt="logo">
     </a>
     <div class="w-full text-grey-darkest mt-6 md:mt-0 leading-normal">
@@ -16,5 +16,5 @@
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2018 Hyperyolo. All rights reserved.</div>
+  <div class="pt-4 mt-4 text-grey-darker text-xs border-t border-grey-lighter text-center"> ©2019 Hyperyolo. All rights reserved.</div>
 </footer>
