--- a/templates/mini-cards.html
+++ b/templates/mini-cards.html
@@ -14,9 +14,9 @@
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-md hover:translateY-2px transition">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">{{title}}</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Anaïs Nin</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">{{text}}</span>
+            <span class="text-grey-dark text-sm">“We don't see things as they are, we see them as we are.”</span>
           </p>
         </div>
       </div>
@@ -25,9 +25,9 @@
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-md hover:translateY-2px transition">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">{{above}}</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Vincent van Gogh</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">{{beyond}}</span>
+            <span class="text-grey-dark text-sm">Road with Cypress and Star</span>
           </p>
         </div>
       </div>
