--- a/templates/mini-cards.html
+++ b/templates/mini-cards.html
@@ -3,9 +3,9 @@
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-md hover:translateY-2px transition">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Carbon</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">The Pogues</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">" Leo integer malesuada nunc vel risus. "</span>
+            <span class="text-grey-dark text-sm">Rainy night in Soho</span>
           </p>
         </div>
       </div>
