fix the broken url links

--- a/templates/footer-1.html
+++ b/templates/footer-1.html
@@ -1,7 +1,7 @@
 <footer class="font-sans bg-black text-white py-8 px-4">
   <div class="mx-auto container overflow-hidden flex flex-col lg:flex-row justify-between">
     <a href="/" class="block mr-4 w-1/2">
-      <img src="https://stitches-cdn.hyperyolo.com/logo-white.png" class="w-32" alt="logo">
+      <img src="https://stitches.hyperyolo.com/images/logo-white.png" class="w-32" alt="logo">
     </a>
     <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
       <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
@@ -13,7 +13,8 @@
       </ul>
       <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
         <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Company</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a>
+        </li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
@@ -22,18 +23,24 @@
         <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Info</li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
         <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer
+            Services</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a>
+        </li>
       </ul>
       <div class="text-grey-dark flex flex-col">
         <div class="inline-block py-2 px-3 text-white uppercase font-medium tracking-wide">Follow Us</div>
         <div class="flex pl-4 justify-start">
-          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
-          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
-          <a class="block flex items-center text-white hover:text-grey no-underline" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i
+              class="fab fa-github-alt"></i></a>
+          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i
+              class="fab fa-slack"></i></a>
+          <a class="block flex items-center text-white hover:text-grey no-underline" href="#"><i
+              class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-grey-darker border-t border-grey-darkest text-center"> ©2019 Hyperyolo. All rights reserved.</div>
+  <div class="pt-4 mt-4 text-grey-darker border-t border-grey-darkest text-center"> ©2019 Hyperyolo. All rights
+    reserved.</div>
 </footer>
