--- a/templates/cards-1.html
+++ b/templates/cards-1.html
@@ -3,9 +3,10 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches.hyperyolo.com/images/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -15,9 +16,10 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches.hyperyolo.com/images/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -27,9 +29,10 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches.hyperyolo.com/images/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -39,9 +42,10 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches.hyperyolo.com/images/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
@@ -51,9 +55,10 @@
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
-        <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
+        <img class="w-full" src="https://stitches.hyperyolo.com/images/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker
+          </h3>
           <p class="inline-flex items-center">
             <span class="text-grey-dark text-sm">Read More</span>
           </p>
