--- a/templates/features-1.html
+++ b/templates/features-1.html
@@ -1,16 +1,20 @@
-<section class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
-  <div class="w-full lg:w-1/2"><img src="https://stitches-cdn.hyperyolo.com/demo-phone.png" alt=""></div>
+<section
+  class="my-8 font-sans container max-w-xl m-auto flex flex-col lg:flex-row text-center lg:text-left sm:items-center">
+  <div class="w-full lg:w-1/2"><img src="https://stitches.hyperyolo.com/images/demo-phone.png" alt=""></div>
   <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
     <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">best app ever</label>
     <h1 class="my-4 font-normal">Our Work Flow</h1>
-    <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
 </section>
-<section class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
+<section
+  class="my-8 pt-8 font-sans container max-w-xl m-auto flex flex-col-reverse lg:flex-row text-center lg:text-left sm:items-center">
   <div class="w-full lg:w-1/2 flex flex-col justify-center items-start p-8 items-center lg:items-start">
     <label for="tagline" class="uppercase tracking-wide text-grey-dark font-bold">best app ever</label>
     <h1 class="my-4 font-normal">Our Work Flow</h1>
-    <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <p class="leading-normal mb-4 text-grey-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
-  <div class="w-full lg:w-1/2"><img src="https://stitches-cdn.hyperyolo.com/demo-phone.png" alt=""></div>
+  <div class="w-full lg:w-1/2"><img src="https://stitches.hyperyolo.com/images/demo-phone.png" alt=""></div>
 </section>
