--- a/templates/footer-2.html
+++ b/templates/footer-2.html
@@ -2,8 +2,8 @@
   <div class="mx-auto max-w-xl overflow-hidden flex justify-between items-center">
     <ul class="text-sm text-grey-dark list-reset flex items-center">
       <li> <a href="/" class="block mr-4 w-32">
-      <img src="https://stitches-cdn.hyperyolo.com/logo-white.png" class="" alt="logo">
-    </a></li>
+          <img src="https://stitches.hyperyolo.com/images/logo-white.png" class="" alt="logo">
+        </a></li>
       <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Product</a></li>
       <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Company</a></li>
       <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">FAQs</a></li>
