--- a/templates/navigation-4.html
+++ b/templates/navigation-4.html
@@ -1,6 +1,6 @@
 <nav class="font-sans bg-white text-center flex justify-between items-center my-4 mx-auto container overflow-hidden">
   <a href="#">
-    <img src="https://stitches-cdn.hyperyolo.com/logo.png" class="h-10" alt="logo">
+    <img src="https://stitches.hyperyolo.com/images/logo.png" class="h-10" alt="logo">
   </a>
   <ul class="text-sm text-grey-dark list-reset flex items-center">
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Products</a></li>
@@ -12,7 +12,7 @@
     <li><a href="#" class="inline-block py-2 px-3 text-grey-darkest hover:text-grey-dark no-underline">Log In</a></li>
     <li>
       <button class="bg-black hover:bg-grey-darker text-white ml-4 py-2 px-3">
-      Sign Up
+        Sign Up
       </button>
     </li>
   </ul>
